<resources>
    <!-- app -->
    <string name="app_name">WorldSkills</string>

    <!-- main -->
    <string name="sign_in">Войти</string>
    <string name="map">Отделения и банкоматы</string>
    <string name="currency">Курсы валют</string>
    <string name="error">Ошибка</string>

    <!-- course -->
    <string name="usd">USD</string>
    <string name="usd_decoded">Американский доллар</string>
    <string name="buy">Покупка</string>
    <string name="sell">Продажа</string>

    <!-- currency cases -->
    <string name="rubles">рублей</string>
    <string name="dollars">долларов</string>

    <!-- map -->
    <string name="hours">Часы работы</string>
    <string name="open">Работает</string>
    <string name="close">Не работает</string>

    <!-- login -->
    <string name="login_title">Авторизация</string>
    <string name="login_subtitle">Введите Ваш логин и пароль</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>

    <!-- card -->
    <string name="my_cards_title">МОИ КАРТЫ</string>
    <string name="operations_history">История операций</string>
    <string name="card_blocked">Карта заблокирована</string>
    <string name="card_block_confirmation">Вы уверены, что хотите заблокировать карту?</string>
    <string name="change_card_name">Введите новое название</string>
    <string name="name_hint">Имя</string>

    <!-- account -->
    <string name="my_accounts_title">МОИ СЧЕТА</string>
    <string name="current_account">Текущий счет</string>

    <!-- credit -->
    <string name="my_credits_title">МОИ КРЕДИТЫ</string>
    <string name="cash_credit">Кредит наличными</string>
    <string name="mortgage_credit">Ипотека</string>
    <string name="credit_payment">Платеж</string>

    <!-- toolbar top -->
    <string name="profile">Профиль</string>
    <string name="user_name">Сергей Владимирович</string> <!-- temporary!!! -->

    <!-- toolbar bottom -->
    <string name="home_hint">Главный</string>
    <string name="payments_hint">Платежи</string>
    <string name="history_hint">История</string>
    <string name="chat_hint">Диалоги</string>

    <!-- profile features -->
    <string name="change_password">Изменение пароля</string>
    <string name="change_password_subtitle">Введите новый пароль</string>
    <string name="change_login">Изменение логина</string>
    <string name="change_login_subtitle">Введите новый логин</string>
    <string name="change">Изменить</string>
    <string name="visits_history">История посещений</string>
    <string name="app_info">Информация о приложении</string>
    <string name="exit">Выход</string>

    <!-- Messages -->
    <string name="message_enter_login_and_password">Пожалуйста, введите логин и пароль</string>
    <string name="message_enter_login">Пожалуйста, введите логин</string>
    <string name="message_enter_password">Пожалуйста, введите пароль</string>
    <string name="message_enter_card_name">Пожалуйста, введите имя карты</string>
    <string name="message_success">Успешно</string>
    <string name="message_server_error">Ошибка сервера</string>
    <string name="message_unknown_error">Неизвестная ошибка</string>
    <string name="message_invalid_login_data">Неверные данные для входа</string>

    <!-- ProgressBarFragment -->
    <string name="progress_title_wait">Пожалуйста, подождите</string>

    <!-- SuccessInfoFragment -->
    <string name="success_info_button_ok">ОК</string>

    <!-- Actions -->
    <string name="block">Заблокировать</string>
    <string name="rename">Переименовать</string>
    <string name="cancel">Отмена</string>
    <string name="enter">Войти</string>
    <string name="put_money">Пополнить</string>
    <string name="transfer">Перевести</string>
    <string name="back">Назад</string>
</resources>
