<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CardActivity"
    android:background="@color/colorPrimaryLight">

    <android.support.v7.widget.Toolbar
        android:id="@+id/profile_top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleMarginEnd="8dp"
        app:titleMarginStart="60dp"
        app:titleTextColor="#FFFFFF" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/card_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_top_toolbar">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/card_rectangle"
            app:layout_constraintBottom_toTopOf="@+id/card_button_put"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColor="#0050FF"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColor="#0050FF"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_name" />

            <TextView
                android:id="@+id/card_blocked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/card_blocked"
                android:textColor="#FF6666"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:textColor="#0050FF"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/card_type"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/card_button_put"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_red"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/put_money"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#FFFFFF"
            android:onClick="onPutMoneyClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/card_button_transfer"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_green"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/transfer"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#FFFFFF"
            android:onClick="onTransferClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/card_actions_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:divider="@drawable/list_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_container">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/card_button_history"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="onCardHistoryClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="false"
                android:duplicateParentState="true"
                android:text="@string/operations_history"
                android:textColor="#0050FF"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/card_button_block"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="onCardBlockClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="false"
                android:duplicateParentState="true"
                android:text="@string/block"
                android:textColor="#0050FF"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/card_button_rename"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="onCardRenameClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="false"
                android:duplicateParentState="true"
                android:text="@string/rename"
                android:textColor="#0050FF"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <include
        android:id="@+id/profile_bottom_toolbar"
        layout="@layout/profile_bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>